--- a/Requirements.txt
+++ b/Requirements.txt
@@ -25,7 +25,7 @@ token. Rails should save customer token and user information to our database.Mem
 Stripe Integration
 * Users should have a stripe customer token in the users table. *DONE*
 * Javascript should prevent Pro form from submitting, when user fills it out,
-and should send card info to Stripe. Stripe will return with a card token.
+and should send card info to Stripe. Stripe will return with a card token. *DONE*
 * Javascript should send user fields and card token to our rails app. Rails app
 should validate the user fields. Rails app will note whether plan 1 or plan 2.
 * Once validated, Rails should send user info (email, plan id) and card token
